# ZError

./: README.md  deploy.sh  index.html  install.sh  update_invoke_route.patch  update_server_channel.patch
.github/workflows/: build-headless.yml  release.yml
src/: App.vue
src-tauri/: Cargo.toml  build.rs
src-tauri/src/: commands.rs  database.rs  lib.rs  main.rs  server.rs  server.rs.orig  server.rs.rej  types.rs  window_size.rs
src/services/: database.ts  environmentDetector.ts  iconCache.ts  modelConfig.ts  settings.ts  versionCheck.ts
src/utils/: invoke.ts  questionImage.ts
src/views/: AppHeader.vue  Home.vue
src/views/questions/: QuestionList.vue
src/views/settings/: AboutApp.vue  GeneralSettings.vue  ModelSettings.vue
