[package]
name = "zerror"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "zerror_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [], optional = true }

[dependencies]
tauri = { version = "2.0", features = [ "macos-private-api", "devtools", "tray-icon", "webview-data-url"], optional = true }
tauri-plugin-opener = { version = "2.0", optional = true }
# tauri-plugin-sql removed - using rusqlite directly
# tauri-plugin-sql = { version = "2.0", features = ["sqlite"] }
tauri-plugin-http = { version = "2.0", features = ["unsafe-headers"], optional = true }
tauri-plugin-fs = { version = "2.0", optional = true }
tauri-plugin-dialog = { version = "2.0", optional = true }
tauri-plugin-clipboard-manager = { version = "2.0", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
futures = "0.3"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.18.1", features = ["v4"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
futures-util = "0.3.31"
rusqlite = { version = "0.32", features = ["bundled"] }
regex = "1.0"
reqwest = { version = "0.12", features = ["json"] }
bytes = "1"
base64 = "0.22"
urlencoding = "2.1"
url = "2.5"
calamine = "0.22"
zip = "0.6"
quick-xml = "0.31"
jieba-rs = "0.8.1"
strsim = "0.10"

[target.'cfg(windows)'.dependencies]
runas = "1.0"
windows = { version = "0.56", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_Security"] }

[[bin]]
name = "zerror_headless"
path = "src/bin/headless.rs"

[features]
default = ["tauri", "tauri-build", "tauri-plugin-opener", "tauri-plugin-http", "tauri-plugin-fs", "tauri-plugin-dialog", "tauri-plugin-clipboard-manager"]
